<resources>
    <string name="app_name">QuiCh</string>
    <string name="sendText">Send</string>
    <string name="sendHint">Enter message</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="userNameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="submitRegisterButton">Register</string>
    <string name="loginIncorrect">Login incorrect</string>
    <string name="nextButton">Next</string>
    <string name="cancelButton">Cancel</string>
    <string name="shortPasswordError">Password must contain at least 8 characters.</string>
    <string name="loginAgain">Please login again</string>
    <string name="usernameExist">Account with this username already exist</string>
    <string name="emailExist">Account with this email already exist</string>
    <string name="emailInput">E-mail</string>
    <string name="newChat">Next chat</string>
    <string name="findingChat">Finding chat...</string>
    <string name="loginInvalid">Login or password is invalid</string>
    <string name="passwordConfirmText">Enter password again</string>
    <string name="passwordConfirmError">Passwords didn\'t match</string>
    <string name="emailConfirmHint">Email confirmation code</string>
</resources>
