<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/gs_top_text_container"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:text="@string/sendText" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sendButton"
        android:backgroundTint="@android:color/transparent"
        android:hint="@string/sendHint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/messagesTexts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/messageText"
        android:layout_below="@id/newChatButton"
        android:gravity="bottom" />

    <Button
        android:id="@+id/newChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gs_top_text_container"
        android:text="@string/newChat"
        android:textColor="#000000" />
</android.widget.RelativeLayout>